10-Kubernetes/Exercises/PersistentData/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-app-ingress
spec:
  rules:
    - host: node.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app-service
                port:
                  number: 3000
          - path: /adminer
            pathType: Prefix
            backend:
              service:
                name: adminer-service
                port:
                  number: 8080
